# paperless-ngx-correspondent-manager

./: .gitignore  AGENTS.md  Dockerfile  README.md  TESTING.md  pyproject.toml
.github/workflows/: build-and-release.yml  test.yml
src/paperless_ngx_correspondent_manager/: __init__.py  cli.py  manager.py
tests/: conftest.py  test_cli.py  test_integration.py  test_manager.py  test_utils.py
